# emu-c5

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.cargo/: config.toml
.github/workflows/: build.yaml
app/: package.json  svelte.config.js  ts-to-zod.config.cjs  vite.config.ts
app/project.inlang/: project_id
app/src/: app.css  app.html  hooks.server.ts  service-worker.ts
app/src/lib/: cookie_store.ts  page.ts  parser.ts  problem.ts  sw-ctl.ts  sw-msg.ts  theme.ts  utils.ts
app/src/lib/grpc/: auth.ts  chat.ts  common.ts  snowflake.ts
app/src/lib/grpc/google/protobuf/: empty.ts  timestamp.ts
app/src/lib/schemas/: api_error.ts  auth.ts  channel.ts  events.ts  post.ts  profile.ts
app/src/lib/server/: api.ts  config.ts  grpc.ts  server_html.ts  snowflake.ts
app/src/routes/: +layout.svelte
app/src/routes/(app)/: +layout.svelte  +layout.ts  +page.svelte  AppDock.svelte  AppNavbar.svelte  AppSidebar.svelte  AppSkeleton.svelte  SlideoutSidebar.svelte  ThemeSelector.svelte
app/src/routes/(app)/(self)/profile/: +page.svelte
app/src/routes/(app)/(self)/self/: +page.svelte
app/src/routes/(app)/(self)/sign-in/: +page.svelte
app/src/routes/(app)/(self)/sign-up/: +page.server.ts  +page.svelte
app/src/routes/(app)/@[user]/: +page.svelte  +page.ts
app/src/routes/(app)/sign-in/: +page.svelte
app/src/routes/(app)/view/[content]/: +page.ts
app/src/routes/api/: +page.svelte
app/src/routes/api/health/: +server.ts
app/src/routes/api/openapi.json/: +server.ts  document.ts
app/src/routes/api/v1/auth/sign-in/: +server.ts
app/src/routes/api/v1/auth/webauthn-challenge/: +server.ts
app/src/routes/api/v1/events/: +server.ts
app/src/routes/assets/dicebear/thumbs/[seed].svg/: +server.ts
app/src/routes/index.html/: +page.svelte  +page.ts
app/src/routes/manifest.json/: +server.ts
dev-utils/: Cargo.toml
dev-utils/src/: database.rs  main.rs  startup.rs
proto/: attributes.json  auth.proto  auth.session.proto  chat.proto  common.proto  snowflake.proto
services/auth/: Cargo.toml
services/auth/src/: main.rs  startup.rs
services/session/: Cargo.toml
services/session/src/: main.rs
services/snowflake/: Cargo.toml
services/snowflake/src/: main.rs  startup.rs
shared/auth/: Cargo.toml
shared/auth/src/: session.rs
shared/database/: Cargo.toml
shared/database/migration/: Cargo.toml
shared/database/migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
shared/database/src/: lib.rs
shared/database/src/orm/: channel.rs  comment.rs  guild.rs  guild_member.rs  guild_role.rs  message.rs  mod.rs  post.rs  prelude.rs  profile.rs  sea_orm_active_enums.rs  user.rs  user_content.rs
shared/grpc/: Cargo.toml  build.rs
shared/grpc/src/: lib.rs
