[workspace]
resolver = "2"
members = [
    # Shared
    "shared/database",
    "shared/database/migration",
    "shared/grpc",
    "shared/build",
    # Services
    "services/auth",
    "services/snowflake",
    # Other
    "dev-utils"
    , "services/session", "shared/auth"]

[workspace.package]
version = "0.0.1-dev"
edition = "2024"
publish = false
authors = ["Samuel Laqua (Phyrone) <phyrone@phyrone.de>"]
license = "EUPL-1.2"
homepage = "www.phyrone.de"
readme = "README.md"

[workspace.dependencies]
emu-shared-auth = { path = "shared/auth" }
emu-shared-database = { path = "shared/database" }
emu-shared-database-migration = { path = "shared/database/migration" }
emu-shared-grpc = { path = "shared/grpc" }

# Core
chrono = { version = "0.4.41", features = ["default", "serde", "now"] }
tempfile = { version = "3.20.0", features = ["getrandom"] }
url = { version = "2.5.4", features = ["serde"] }
rand = { version = "0.9.1", features = ["std"] }
fastrand = { version = "2.3.0", features = ["std"] }
uuid = { version = "1.17.0", features = ["v4", "rng-rand", "serde"] }
semver = { version = "1.0.26", features = ["std", "serde"] }
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["std", "serde"] }
hashbrown = { version = "0.15.4", features = ["rayon", "serde"] }
indexmap = { version = "2.9.0", features = ["serde", "rayon", "std"] }

# Utils
hexafreeze = { version = "0.5" }
postgresql_embedded = { version = "0.18.5", features = ["indicatif"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
clap = { version = "4.5.40", features = ["env", "cargo", "derive", "string", "unicode"] }
clap-num = { version = "1.2.0" }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing", "log"] }
argon2 = { version = "0.5.3", features = ["std", "simple"] }
webauthn-rs = { version = "0.5.1", features = ["conditional-ui", "danger-allow-state-serialisation", "resident-key-support", "workaround-google-passkey-specific-issues"] }

# Cryptography
digest = { version = "0.10.7", features = [] }
sha2 = { version = "0.10.9", features = [] }
sha3 = { version = "0.10.8", features = ["reset"] }
hmac = { version = "0.12.1", features = ["std", "reset"] }

# Async, Network, IO and Concurrency
tokio = { version = "1.45.1", features = ["full", "mio", "tracing"] }
futures-lite = { version = "2.6.0", features = [] }

# Protobuf
prost = { version = "0.13.5", features = ["prost-derive"] }
tonic = { version = "0.13.1", features = ["zstd", "gzip", "deflate", "tls-ring"] }
tonic-build = { version = "0.13.1", features = [] }

# Database
sqlx = { version = "0.8.6", features = ["all-databases", "uuid", "regexp", "runtime-tokio", "chrono", "bit-vec", "runtime-tokio-rustls"] }
sea-orm = { version = "1.1.12", features = [
    # Runtime
    "runtime-tokio", "runtime-tokio-rustls",
    # Database
    "sqlx-all",
    # Types
    "with-uuid", "with-json", "serde_json", "with-chrono",
] }
sea-orm-migration = { version = "1.1.12", features = [
    # Runtime
    "runtime-tokio", "runtime-tokio-rustls",
    # Database
    "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql",
    # Types
    "with-uuid", "with-json", "with-chrono"
] }
sea-schema = { version = "0.16.2", features = ["log", "runtime-tokio", "sqlx-all", "with-serde"] }
sea-orm-codegen = { version = "1.1.12" }
seaography = { version = "1.1.4", features = [
    "with-chrono", "with-json", "with-uuid", "with-postgres-array"
] }
redis = { version = "0.32.0", features = ["cluster", "cluster-async", "r2d2", "tokio-comp"] }

# Error Handling
error-stack = { version = "0.5.0", features = ["serde", "backtrace", "anyhow"] }
thiserror = { version = "2.0.12", features = ["std"] }
anyhow = { version = "1.0.98", features = ["std", "backtrace"] }

# Serde and Co.
serde = { version = "1.0.219", features = ["alloc", "derive", "rc"] }
serde-big-array = { version = "0.5.1", features = [] }
serde_json = { version = "1.0.140", features = ["std", "indexmap", "preserve_order"] }
rmp = { version = "0.8.14", features = ["std"] }
rmp-serde = { version = "1.3.0" }
schemars = { version = "1.0.0-alpha.21", features = ["url2", "uuid1", "semver1", "bytes1", "derive", "preserve_order"] }
quick-xml = { version = "0.37.5", features = ["serde", "async-tokio", "escape-html", "encoding_rs", "overlapped-lists"] }
borsh = { version = "1.5.7", features = ["rc", "bytes", "derive"] }


# Logging and Tracing
sentry = { version = "0.39.0", features = ["anyhow", "log", "tower", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
pretty_env_logger = { version = "0.5.0" }



[profile.dev]
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
