[package]
name = "emu-service-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tokio.workspace = true
emu-shared-grpc.workspace = true
argon2 = { version = "0.5.3", features = ["std", "simple"] }
