[package]
name = "emu-service-auth"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tokio.workspace = true
emu-shared-grpc.workspace = true
redis.workspace = true
webauthn-rs.workspace = true
clap.workspace = true
url.workspace = true
argon2.workspace = true
pretty_env_logger.workspace = true
clap-verbosity-flag.workspace = true
tracing.workspace = true
emu-shared-database = { version = "0.0.1-dev", path = "../../shared/database" }

