[package]
name = "emu-service-auth-session"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
dotenvy.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
emu-shared-database.workspace = true
pretty_env_logger.workspace = true
tokio.workspace = true
thiserror.workspace = true
error-stack.workspace = true
sentry.workspace = true
emu-shared-grpc.workspace = true
tonic.workspace = true
emu-shared-auth.workspace = true
