[package]
name = "emu-shared-database"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
sqlx.workspace = true
sea-orm.workspace = true
seaography.workspace = true
serde.workspace = true
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true
error-stack.workspace = true
emu-shared-database-migration.workspace = true

