[package]
name = "emu-shared-grpc"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
schemars.workspace = true
serde.workspace = true
borsh.workspace = true
bytes.workspace = true

[build-dependencies]
hashbrown.workspace = true
indexmap.workspace = true

serde.workspace = true
serde_json.workspace = true
tonic-build.workspace = true
